--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      
+
       ga('create', 'UA-45600261-5', 'auto');
-      ga('send', 'pageview');</script></body></html>
+      ga('send', 'pageview');</script><script type="text/javascript" src="https://flippa.com/assets/flippaPromoBar.js" id="flippa-promo-bar" data-listing-id="6419769"></script></body></html>
