--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-45600261-5', 'auto');
-      ga('send', 'pageview');</script><script type="text/javascript" src="https://flippa.com/assets/flippaPromoBar.js" id="flippa-promo-bar" data-listing-id="6419769"></script></body></html>
+      ga('send', 'pageview');</script></body></html>
